tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_install_latest.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - install
    - latest
---
success: true
exit_code: 0
----- stdout -----
Installing toolchain 'latest'
✔ Installed toolchain version 'latest'
Make sure '[MOON_HOME]/bin' is added to your PATH

----- stderr -----
Finished. moon: ran 76 tasks, now up to date
Finished. moon: ran 76 tasks, now up to date
Finished. moon: ran 76 tasks, now up to date
Finished. moon: ran 76 tasks, now up to date
