tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_install_neverexists.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - install
    - neverexists
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
No toolchain available for requested spec 'neverexists'
