tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_list_2.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - list
---
success: true
exit_code: 0
----- stdout -----
Moonup home: [MOONUP_HOME]

No toolchains installed

----- stderr -----
