tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_pin_interactive.snap
---
source: tests/e2e/flow.rs
expression: output
---
 ›
❯ 0.9.2+bbe2b338f
✔ Pick a installed version · 0.9.2+bbe2b338f
✔ Pinned toolchain to version '0.9.2+bbe2b338f'
Toolchain file: [TEMP_FILE]
