tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_selfupdate.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - self-update
---
success: true
exit_code: 0
----- stdout -----
moonup is already up-to-date

----- stderr -----
