tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_uninstall.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - uninstall
    - 0.1.20241231+ba15a9a4e
---
success: true
exit_code: 0
----- stdout -----
✔  Uninstalled toolchain 0.1.20241231+ba15a9a4e

----- stderr -----
